--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                         "            Mayor Información: 3103659727\n")
                 </script>
 
-                <!--main>
+                <main>
                     <p id="lorem">"Sed ut perspiciatis unde omnis iste natus
                         error sit voluptatem accusantium
                         doloremque laudantium, totam rem
@@ -84,7 +84,7 @@
                         voluptate velit esse quam nihil molestiae consequatur,
                         vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?"</p>
 
-                </main-->
+                </main>
 
                     <h1 ID="somedclin">Somedclin</h1>
 
